# skills

./: .gitignore  README.md
textum/scripts/: pyproject.toml  pyrightconfig.json
textum/scripts/tests/: test_next_routing.py  test_prd_bundle_contract.py  test_scaffold_bundle_contract.py  test_split_bundle_contract.py  test_story_bundle_contract.py
textum/scripts/textum/: textum_cli.py  textum_cli_artifacts.py  textum_cli_emit.py  textum_cli_next.py  textum_cli_prd.py  textum_cli_prd_check.py  textum_cli_prd_init.py  textum_cli_prd_patch.py  textum_cli_prd_render.py  textum_cli_prd_slice.py  textum_cli_result.py  textum_cli_runner.py  textum_cli_scaffold.py  textum_cli_split.py  textum_cli_split_check1.py  textum_cli_split_check2.py  textum_cli_split_checkout_cli.py  textum_cli_split_checks.py  textum_cli_split_generate.py  textum_cli_split_plan.py  textum_cli_split_plan_check.py  textum_cli_split_plan_init.py  textum_cli_story.py  textum_cli_story_check.py  textum_cli_story_load.py  textum_cli_story_pack.py  textum_cli_support.py  textum_json_patch.py  textum_json_patch_append.py  textum_json_patch_delete.py  textum_json_patch_set.py  textum_json_patch_utils.py  textum_json_path.py  textum_json_path_parse.py
textum/scripts/textum/prd/: __init__.py  prd_pack.py  prd_pack_ids.py  prd_pack_io.py  prd_pack_maps.py  prd_pack_paths.py  prd_pack_placeholders.py  prd_pack_types.py  prd_pack_validate.py  prd_pack_validate_access.py  prd_pack_validate_modules.py  prd_pack_validate_project.py  prd_pack_validate_refs.py  prd_pack_validate_rules_api.py  prd_pack_validate_utils.py  (+18 more)
(+91 files in other folders)
